rendering of single template files working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,10 @@ clap = { version = "4.0.18", features = ["derive"] }
 colored = "2.0.0"
 dirs = "4.0.0"
 itertools = "0.10.5"
+minijinja = "1.0.5"
 path-clean = "0.1.0"
 pathdiff = "0.2.1"
+toml = "0.7.6"
 
 [dev-dependencies]
 serial_test = "0.9.0"
