--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ anyhow = "1.0.66"
 clap = { version = "4.0.18", features = ["derive"] }
 colored = "2.0.0"
 dirs = "4.0.0"
+glob = "0.3.1"
 itertools = "0.10.5"
-minijinja = "1.0.5"
+minijinja = { version = "1.0.5", features = ["loader"] }
 path-clean = "0.1.0"
 pathdiff = "0.2.1"
 toml = "0.7.6"
